--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 
-    Hello Carine.
+    <p>Hello Carine.</p>
 
-    Happy Brithday!!!
+    <p>Happy Brithday!!!</p>
 
+    <p>
+        Your Birthday package includes:
+        <li>12 months .com domain subscription for carinebraendle.com </li>
+        <li>12 months personal e-mail subscription for your new .com domain </li>
+    </p>
 
 </html>
