update with new theme

--- a/index.html
+++ b/index.html
@@ -1,14 +1,3 @@
-<!DOCTYPE html>
-<html>
-
-    <p>Hello Carine.</p>
-
-    <p>Happy Brithday!!!</p>
-
-    <p>
-        Your Birthday package includes:
-        <li>12 months .com domain subscription for carinebraendle.com </li>
-        <li>12 months personal e-mail subscription for your new .com domain </li>
-    </p>
-
-</html>
+---
+layout: front
+---
